# fuzzuf-cc

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  entrypoint.sh  fuzzuf-afl-c++  fuzzuf-afl-cc  fuzzuf-c++  fuzzuf-cc  fuzzuf-clang  fuzzuf-ijon-cc  shell.sh
.github/workflows/: build.yaml
check/: config.h.in  config.py.in  fix_lib_dir.sh  get_sitedir.cpp  get_soabi.py  get_user_sitedir.cpp
cmake/: EasyPack.cmake  FindPython3x.cmake
docs/: building.md
docs/features/: bb-id-assigner.md  bitmap-feedback.md  cfg-exporter.md  forkserver.md  ijon-feedback.md
features/: CMakeLists.txt
features/bb-id-assigner/: CMakeLists.txt  bb-id-assigner-pass.so.cc
features/bb-id-assigner/include/: bb-id-assigner-pass.so.h
features/bitmap/: CMakeLists.txt  bitmap-llvm-rt.o.c  config.h  types.h
features/bitmap/llvm-pass/: CMakeLists.txt  bitmap-llvm-pass.so.cc
features/cfg-exporter/: CMakeLists.txt  cfg-exporter-pass.so.cc
features/forkserver/: .gitignore  CMakeLists.txt  README.md  benchmark_client.cc  config.h  forkserver.c  test_put.c
features/ijon/: CMakeLists.txt  README.md  config.h  ijon-llvm-rt.o.c  ijon.h  test_put.c  types.h
features/ijon/stub/: ijon.h
fuzzuf_cc/: __init__.py  binary.py  config.py  instrumentor.py  meta_instrumentor.py  metadata.py  types.py
fuzzuf_cc/feature/: bb_id_assigner.py  bitmapfeedback.py  cfg_exporter.py  feature.py  forkserver.py  ijonfeedback.py
fuzzuf_cc/util/: file.py
include/fuzzuf_cc/utils/: check_capability.hpp  create_shared_memory.hpp  errno_to_system_error.hpp  executor.hpp  range_traits.hpp  shared_range.hpp  void_t.hpp
include/fuzzuf_cc/utils/type_traits/: remove_cvr.hpp
put/branch/: branch.c
put/cat/: README.md  cat.c
put/exifutil/: .gitignore  README.md  exifutil.c
put/ijon/: .gitignore  README.md  test.c  test2.c
put/loop_ff/: loop_ff.c
put/zeroone/: zeroone.c
src/: CMakeLists.txt
src/utils/: CMakeLists.txt  create_shared_memory.cpp  errno_to_system_error.cpp  executor.cpp
test/: CMakeLists.txt
test/cat/: CMakeLists.txt
test/cat/fuzzuf-afl-cc/: CMakeLists.txt  test.sh
test/cat/fuzzuf-clang/: CMakeLists.txt  test.sh
test/exifutil/: CMakeLists.txt
test/exifutil/afl/: CMakeLists.txt
test/exifutil/asan/: CMakeLists.txt
test/exifutil/fuzzuf/: CMakeLists.txt
test/exifutil/plain/: CMakeLists.txt
test/features/: CMakeLists.txt
test/features/bitmap/: CMakeLists.txt  bitmap.cpp  update_method.cpp
test/features/cfg-exporter/: CMakeLists.txt  put-branch.cfg.expected  put-loopff.cfg.expected  test.sh
test/features/forkserver/: CMakeLists.txt  stdin_test.sh  stdout_test.sh
test/features/ijon/: CMakeLists.txt  ijon.cpp
tool/: CMakeLists.txt  dump_ijon_shm.cpp
